Once again a potential fix to the sidebar on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,10 +13,6 @@
   --blue-600: #2563eb;
 }
 
-body {
-  height: 100dvh;
-}
-
 .react-calendar {
   width: 100%;
   border: var(--gray-200) 3px solid;
